k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ftth
  labels:
    app.kubernetes.io/name: ftth
